--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>HollowCatPrincess</title>
+      <title>Hollow knight Map and Checklist</title>
     <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="stylesheet"  href="stylesheet.css" />
-    
   </head>
 <body>
 
